--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   fl_chart: ^0.69.0
   qr_code_scanner: ^1.0.1
   intl: ^0.19.0
-  
+  firebase_storage: ^12.3.4
+  image_picker: ^1.1.2
 
 
 
