--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   image_picker: ^1.1.2
   firebase_messaging: ^15.1.4
   image_cropper: ^8.0.2
+  image_gallery_saver: ^2.0.3
+  screenshot: ^3.0.0
+  permission_handler: ^11.3.1
 
 
 
